OnBoarding scaffolding is complete Tweaked Checkbox css to show checkmark in black for default Fixed CustomTextArea so counter moves when there is a scrollbar Added final step ThankYou Disabled buttons untill each steaps requirements are met All components have mocked data that propagates down, the idea is that it will all originate from the Container

--- a/frontend/src/css/components/Checkbox.css
+++ b/frontend/src/css/components/Checkbox.css
@@ -35,5 +35,6 @@
     bottom: 0;
     text-align: center;
     line-height: 1.5;
+    color: black;
   }
 }
